@@ -54,7 +54,7 @@ public class Service
                 new EventModule(),
                 new JsonModule(),
                 new JaxrsModule());
-        app.strictConfig().initialize();
+        app.initialize();
     }
 
     private Service() {}
