@@ -1,6 +1,7 @@
 208
 
 - Only bind HTTPS config for HTTP server when HTTPS is enabled.
+- Make strict config default for Bootstrap. Non-strict is deprecated.
 
 207
 
